[gd_scene load_steps=2 format=3 uid="uid://evy8l6341evn"]

[ext_resource type="Script" path="res://tscns/generic_hit-hurt_box/entity_collision_hull.gd" id="1_snbnd"]

[node name="entityCollisionHull" type="Area3D"]
collision_mask = 16
script = ExtResource("1_snbnd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="pickup_RespawnEnd" from="." to="." method="_on_pickup_respawn_end"]
[connection signal="pickup_RespawnStart" from="." to="." method="_on_pickup_respawn_start"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
